Triggers added - some clean up done as well

--- a/01-Login/.env.example
+++ b/01-Login/.env.example
@@ -1,4 +1,5 @@
-AUTH0_DOMAIN=auth0-project.us.auth0.com
-API_IDENTIFIER=62d56e9192b40a722a1a471a
-CLIENT_ID=https://auth0-project.us.auth0.com/api/v2/
+AUTH0_DOMAIN=
+API_IDENTIFIER=
+CLIENT_ID=
 CLIENT_SECRET=
+
